Project

General

Profile

Actions

Bug #18078

closed

rgw-admin: missing command to modify placement targets

Added by Yehuda Sadeh over 7 years ago. Updated about 7 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
jewel
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Related issues 1 (0 open1 closed)

Copied to rgw - Backport #18216: jewel: rgw-admin: missing command to modify placement targetsResolvedNathan CutlerActions
Actions #1

Updated by Yehuda Sadeh over 7 years ago

  • Assignee set to Yehuda Sadeh
Actions #2

Updated by Casey Bodley over 7 years ago

  • Status changed from New to Pending Backport
Actions #3

Updated by Casey Bodley over 7 years ago

  • Status changed from Pending Backport to Fix Under Review

added followup pr https://github.com/ceph/ceph/pull/12242 that should be backported at the same time

Actions #4

Updated by Casey Bodley over 7 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #5

Updated by Nathan Cutler over 7 years ago

  • Copied to Backport #18216: jewel: rgw-admin: missing command to modify placement targets added
Actions #6

Updated by Nathan Cutler about 7 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF