rgw_admin: commands to manage placement targets

Fixes: http://tracker.ceph.com/issues/18078

added the following commands:

 radosgw-admin zone placement add
 radosgw-admin zone placement modify
 radosgw-admin zone placement rm
 radosgw-admin zone placement list

Signed-off-by: Yehuda Sadeh <yehuda@redhat.com>